--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -1,4 +1,14 @@
 header.main-header
-    nav.navbar
-        .container-1140
-        img(src="images/Logo.svg", alt="Логотип Приют НН")
+    nav.navbar.navbar-expand-sm.main-navigation
+        .container
+            .navbar-collapse
+                img(src="images/Logo.svg", alt="Логотип Приют НН")
+                ul.nav.navbar-nav
+                    li.nav-item
+                        a.nav-link(href="") О нас
+                    li.nav-item
+                        a.nav-link(href="") Услуги
+                    li.nav-item
+                        a.nav-link(href="") Новости
+                    li.nav-item
+                        a.nav-link(href="") Контакты
