--- a/src/style/_mainpage.sass
+++ b/src/style/_mainpage.sass
@@ -1,3 +1,5 @@
-font-family: $ff
-container-1440: 1440px
-container-1140: 1140px
+
+body
+    font-family: 'Roboto', sans-serif
+    margin: 0 auto
+    padding: 0
