--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -1,4 +1,4 @@
-
+@import "../../node_modules/bootstrap/scss/bootstrap" 
 @import "../../node_modules/owl.carousel/src/scss/owl.carousel" 
 @import variables 
 @import mixin 
