--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -2,13 +2,17 @@ header.main-header
     nav.navbar.navbar-expand-sm.main-navigation
         .container
             .navbar-collapse
-                img(src="images/Logo.svg", alt="Логотип Приют НН")
+                .nav-image
+                    img(src="images/Logo.svg", alt="Логотип Приют НН")
                 ul.nav.navbar-nav
                     li.nav-item
-                        a.nav-link(href="") О нас
+                        a.nav-link.p-0(href="") О нас
                     li.nav-item
-                        a.nav-link(href="") Услуги
+                        a.nav-link.p-0(href="") Услуги
                     li.nav-item
-                        a.nav-link(href="") Новости
+                        a.nav-link.p-0(href="") Новости
                     li.nav-item
-                        a.nav-link(href="") Контакты
+                        a.nav-link.p-0(href="") Контакты
+                .nav-phone
+                    img(src="images/icon/telephone.svg")
+                    a.number-phome(href="tel:88005553535") 8 800 555 35 35
