--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -3,16 +3,18 @@ header.main-header
         .container
             .navbar-collapse
                 .nav-image
+                a(href="")
                     img(src="images/Logo.svg", alt="Логотип Приют НН")
                 ul.nav.navbar-nav
                     li.nav-item
+                        a.nav-link.p-0(href="") Найти друга
+                    li.nav-item
+                        a.nav-link.p-0(href="") Информация
+                    li.nav-item
                         a.nav-link.p-0(href="") О нас
                     li.nav-item
-                        a.nav-link.p-0(href="") Услуги
-                    li.nav-item
-                        a.nav-link.p-0(href="") Новости
-                    li.nav-item
-                        a.nav-link.p-0(href="") Контакты
+                        a.nav-link.p-0(href="") Пожертвования
                 .nav-phone
                     img(src="images/icon/telephone.svg")
                     a.number-phome(href="tel:88005553535") 8 800 555 35 35
+                    
