--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -4,7 +4,7 @@ header.main-header
             .navbar-collapse
                 .nav-image
                 a(href="")
-                    img(src="images/Logo.svg", alt="Логотип Приют НН")
+                    img(src="images/logo.svg", alt="Логотип Приют НН")
                 ul.nav.navbar-nav
                     li.nav-item
                         a.nav-link.p-0(href="") Найти друга
@@ -15,6 +15,6 @@ header.main-header
                     li.nav-item
                         a.nav-link.p-0(href="") Пожертвования
                 .nav-phone
-                    img(src="images/icon/telephone.svg")
+                    img(src="images/icon/phone.svg")
                     a.number-phome(href="tel:88005553535") 8 800 555 35 35
                     
