--- a/src/blocks/footer.pug
+++ b/src/blocks/footer.pug
@@ -1,2 +1,41 @@
 footer.main-footer
-    .container-1140
+    .container
+        .navbar-collapse.nav.main-nav-style.main-footer-style
+            section.footer-item
+                ul.nav.navbar-nav.main-navbar-style
+                    li.nav-item
+                        a.nav-link.footer-nav-link.p-0(href="") Найти друга
+                    li.nav-item
+                        a.nav-link.footer-nav-link.p-0(href="") Информация
+                    li.nav-item
+                        a.nav-link.footer-nav-link.p-0(href="") О нас
+                    li.nav-item
+                        a.nav-link.footer-nav-link.p-0(href="") Пожертвования
+            section.footer-item
+                .nav
+                    .nav-image
+                        a(href="")
+                            img(src="images/social/twitter.svg", alt="Наш twitter")
+                    .nav-image
+                        a(href="")
+                            img(src="images/social/odnoklassniki.svg", alt="Наш odnoklassniki")
+                    .nav-image
+                        a(href="")
+                            img(src="images/social/vk.svg", alt="Наш vk")
+                    .nav-image
+                        a(href="")
+                            img(src="images/social/instagram.svg", alt="Наш instagram")
+                    .nav-image
+                        a(href="")
+                            img(src="images/social/facebook.svg", alt="Наш facebook")
+                a(href="")
+                        img(src="images/logo.svg", alt="Логотип Приют НН")
+            section.footer-item
+                img(src="images/icon/phone.svg")
+                a.number-phone(href="tel:88005553535") 8 800 555 35 35
+                p priutnn@mail.ru
+                .our-adress
+                    p.m-0 Проспект Бусыгина, д. 16
+                    p.m-0  Ул. Сергея Есенина, д. 38
+                    p.m-0  Ул. Глеба Успенского, д. 1
+                
