--- a/src/style/_header.sass
+++ b/src/style/_header.sass
@@ -1,10 +1,9 @@
-.navbar-collapse
+.main-nav-style
     justify-content: start
-    .navbar-nav
+    .main-navbar-style
         flex-grow: 1
         .nav-link
             color: #000000
-            margin: 8px 0 0 30px
             font-size: 16px
             position: relative
             &:hover
@@ -19,7 +18,9 @@
                 transition: all 0.2s ease
             &:hover:after
                 width: 100%
-    .number-phome
+        .nav-link-style
+            margin: 8px 0 0 30px
+    .number-phone
         color: #000000
         margin-left: 3px
         text-decoration: none
