--- a/src/index.pug
+++ b/src/index.pug
@@ -14,11 +14,69 @@ html(lang="ru")
             //header
             include blocks/header
             //end header
-
-            //main
             
+            //main
+            section.topslider
+                .topslider__list.js-topslider
+                    .topslider__slide
+                        .slider__back1
+                            .container.topslider__slide-row
+                                .topslider__slide-text
+                                    .topslider__slide-title Забери своего
+                                        .text нового друга
+                                .topslider__slide-photo
+                                img(src="images/index-slider/index-lider-1.png", alt="")
+
+                .topslider__slide
+                        .slider__back1
+                            .container.topslider__slide-row
+                                .topslider__slide-text
+                                    .topslider__slide-title Забери своего
+                                        .text нового друга
+                                .topslider__slide-photo
+                                img(src="images/index-slider/index-lider-2.png", alt="")
             //end main
-                
+            
             //footer
             include blocks/footer
             //end footer
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        script(type="text/javascript" src="js/jquery-3.5.1.min.js")
+        script(type="text/javascript" src="js/slick.min.js")
+        script(type="text/javascript" src="js/jquery.fancybox.min.js")
+        script(type="text/javascript" src="js/main.js")
