--- a/src/blocks/footer.pug
+++ b/src/blocks/footer.pug
@@ -3,16 +3,16 @@ footer.main-footer
         .navbar-collapse.nav.main-nav-style.main-footer-style
             section.footer-item
                 ul.nav.navbar-nav.main-navbar-style
-                    li.nav-item
+                    li.nav-item.footer-nav-item-style
                         a.nav-link.footer-nav-link.p-0(href="") Найти друга
-                    li.nav-item
+                    li.nav-item.footer-nav-item-style
                         a.nav-link.footer-nav-link.p-0(href="") Информация
-                    li.nav-item
+                    li.nav-item.footer-nav-item-style
                         a.nav-link.footer-nav-link.p-0(href="") О нас
-                    li.nav-item
+                    li.nav-item.footer-nav-item-style
                         a.nav-link.footer-nav-link.p-0(href="") Пожертвования
             section.footer-item
-                .nav
+                .nav.nav-footer-style
                     .nav-image
                         a(href="")
                             img(src="images/social/twitter.svg", alt="Наш twitter")
@@ -29,13 +29,17 @@ footer.main-footer
                         a(href="")
                             img(src="images/social/facebook.svg", alt="Наш facebook")
                 a(href="")
-                        img(src="images/logo.svg", alt="Логотип Приют НН")
+                    img(src="images/logo.svg", alt="Логотип Приют НН")
             section.footer-item
-                img(src="images/icon/phone.svg")
-                a.number-phone(href="tel:88005553535") 8 800 555 35 35
-                p priutnn@mail.ru
+                .our-contacts-footer
+                    img(src="images/icon/phone.svg")
+                    a.number-phone(href="tel:88005553535") 8 800 555 35 35
+                    p priutnn@mail.ru
                 .our-adress
                     p.m-0 Проспект Бусыгина, д. 16
-                    p.m-0  Ул. Сергея Есенина, д. 38
-                    p.m-0  Ул. Глеба Успенского, д. 1
-                
+                    p.m-0 Ул. Сергея Есенина, д. 38
+                    p.m-0 Ул. Глеба Успенского, д. 1
+    section.footer-copyright
+        .container
+            p.footer-copyright-text.m-0
+                nobr © Приют НН Все права на любые материалы, защищены в соответствии с российским и международным законодательствами об авторском праве и смежных правах.
