--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -3,6 +3,23 @@
 .main-footer-style
     justify-content: space-between
     .footer-item
-        margin-top: 50px
-    .footer-nav-link
-        margin: 10px 0 10px 0
+        margin: 50px 0 50px 0
+        .footer-nav-item-style
+            margin: 10px 0 10px 0
+            .footer-nav-link
+                display: inline
+        .nav-footer-style
+            justify-content: space-between
+            padding-bottom: 73px
+        .our-adress
+            padding-top: 30px
+            text-align: center
+        .our-contacts-footer
+            text-align: center
+.footer-copyright
+    background-color: $text
+    .footer-copyright-text
+        color: #FFFFFF
+        font-size: 14px
+        text-align: center
+        padding: 20px 0 20px 0
