--- a/src/index.pug
+++ b/src/index.pug
@@ -36,6 +36,10 @@ html(lang="ru")
             //-                     .topslider__slide-photo
             //-                     img(src="images/index-slider/index-lider-2.png", alt="")
             //end main
+
+            //stats-block
+            include blocks/stats
+            //end stats
             
             //footer
             include blocks/footer
