--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -3,6 +3,7 @@
 .main-footer-style
     justify-content: space-between
     .footer-item
+        width: 210px
         margin: 50px 0 50px 0
         .footer-nav-item-style
             margin: 10px 0 10px 0
