--- a/src/blocks/stats.pug
+++ b/src/blocks/stats.pug
@@ -6,14 +6,14 @@ section.stat-block
             .stat-block-style
                 .stat-block-info
                     .stat-block-img
-                        img(src="images/icon/stat-paw-icon.svg", alt="Логотип Приют НН")
-                    .stat-block-items 
+                        img(src="images/icon/stat-paw-icon.svg", alt="Лапка")
+                    .stat-block-items
                         span.stat-block-info-span 808
                         p.stat-block-info-p Сейчас в приюте
                 .stat-block-info
                     .stat-block-img
-                        img(src="images/icon/stat-home-icon.svg", alt="Логотип Приют НН")
-                    .stat-block-items    
+                        img(src="images/icon/stat-home-icon.svg", alt="Домик")
+                    .stat-block-items
                         span.stat-block-info-span 204
                         p.stat-block-info-p Нашли свой дом
             p.stat-block-text При появлении в доме собаки или кошки ваш образ жизни кардинально изменится! Вы будете подстраиваться под ритм вашего питомца, отказываться от выходных и позднего подъема. Животные - источник тепла и ласки, а так же огромного количества положительных эмоций!
