slider-samiy-luchuy-block-v-mire-♥

--- a/src/index.pug
+++ b/src/index.pug
@@ -28,13 +28,22 @@ html(lang="ru")
             //-                     img(src="images/index-slider/index-lider-1.png", alt="")
 
             //-     .topslider__slide
-            //-             .slider__back1
+            //-             .slider__back2
             //-                 .container.topslider__slide-row
             //-                     .topslider__slide-text
             //-                         .topslider__slide-title Забери своего
             //-                             .text нового друга
             //-                     .topslider__slide-photo
             //-                     img(src="images/index-slider/index-lider-2.png", alt="")
+
+            //-     .topslider__slide
+            //-             .slider__back3
+            //-                 .container.topslider__slide-row
+            //-                     .topslider__slide-text
+            //-                         .topslider__slide-title Забери своего
+            //-                             .text нового друга
+            //-                     .topslider__slide-photo
+            //-                     img(src="images/index-slider/index-lider-3.png", alt="")
             //end main
 
             //stats-block
