--- a/src/index.pug
+++ b/src/index.pug
@@ -15,40 +15,13 @@ html(lang="ru")
             include blocks/header
             //end header
             
-            //main
-            //- section.topslider
-            //-     .topslider__list.js-topslider
-            //-         .topslider__slide
-            //-             .slider__back1
-            //-                 .container.topslider__slide-row
-            //-                     .topslider__slide-text
-            //-                         .topslider__slide-title Забери своего
-            //-                             .text нового друга
-            //-                     .topslider__slide-photo
-            //-                     img(src="images/index-slider/index-lider-1.png", alt="")
-
-            //-     .topslider__slide
-            //-             .slider__back2
-            //-                 .container.topslider__slide-row
-            //-                     .topslider__slide-text
-            //-                         .topslider__slide-title Забери своего
-            //-                             .text нового друга
-            //-                     .topslider__slide-photo
-            //-                     img(src="images/index-slider/index-lider-2.png", alt="")
-
-            //-     .topslider__slide
-            //-             .slider__back3
-            //-                 .container.topslider__slide-row
-            //-                     .topslider__slide-text
-            //-                         .topslider__slide-title Забери своего
-            //-                             .text нового друга
-            //-                     .topslider__slide-photo
-            //-                     img(src="images/index-slider/index-lider-3.png", alt="")
-            //end main
-
             //stats-block
             include blocks/stats
             //end stats
+
+            //about-us
+            include blocks/index-about-us
+            //end about-us
             
             //footer
             include blocks/footer
