--- a/src/index.pug
+++ b/src/index.pug
@@ -23,6 +23,10 @@ html(lang="ru")
             include blocks/index-about-us
             //end about-us
             
+            //information
+            include blocks/index-information
+            //end information
+
             //footer
             include blocks/footer
             //end footer
