--- a/src/index.pug
+++ b/src/index.pug
@@ -27,6 +27,10 @@ html(lang="ru")
             include blocks/index-information
             //end information
 
+            //feedback
+            include blocks/feedback
+            //end feedback
+
             //footer
             include blocks/footer
             //end footer
