--- a/src/style/_index-information.sass
+++ b/src/style/_index-information.sass
@@ -8,11 +8,11 @@
 .news-content-row
     display: flex
     justify-content: space-between
-    margin-bottom: 80px
+    margin-bottom: 60px
     .news-content-col
         margin-left: 25px
         .news-content-date
-            padding: 0 3px 0 3px
+            padding: 3px 5px 3px 5px
             display: inline
             background-color: $red
             font-weight: 500
