--- a/src/blocks/index-information.pug
+++ b/src/blocks/index-information.pug
@@ -1,6 +1,6 @@
 section.news
     .container
-        p.news-name Информация
+        p.block-head Информация:
         .news-content-row
             .news-content-col
                 p.news-content-date 16/10/2020
