--- a/src/index.pug
+++ b/src/index.pug
@@ -31,6 +31,10 @@ html(lang="ru")
             include blocks/feedback
             //end feedback
 
+            //map
+            include blocks/index-map
+            //end map
+
             //footer
             include blocks/footer
             //end footer
