--- a/src/style/_feedback.sass
+++ b/src/style/_feedback.sass
@@ -27,3 +27,5 @@
         color: #ffffff
         background-color: #E63946
         margin: 38px 0 38px 43%
+        &:hover
+            background-color: #e24552
