--- a/src/blocks/stats.pug
+++ b/src/blocks/stats.pug
@@ -2,7 +2,7 @@ section.stat-block
     .container
         h2.block-head Статистика:
         .stat-block-style
-            p.stat-block-text Как уличное животное обретает дом? Редко, когда человек, встретивший бездомыша, за несколько минут решается взять его к себе. Чаще всего за этим стоят десятки людей. А само животное проходит большой путь — километры дороги и несколько лет жизни в приютах в ожидании хозяина.
+            p.stat-block-text.user-select-none Как уличное животное обретает дом? Редко, когда человек, встретивший бездомыша, за несколько минут решается взять его к себе. Чаще всего за этим стоят десятки людей. А само животное проходит большой путь — километры дороги и несколько лет жизни в приютах в ожидании хозяина.
             .stat-block-style
                 .stat-block-info
                     .stat-block-img
@@ -16,4 +16,4 @@ section.stat-block
                     .stat-block-items
                         span.stat-block-info-span 204
                         p.stat-block-info-p Нашли свой дом
-            p.stat-block-text При появлении в доме собаки или кошки ваш образ жизни кардинально изменится! Вы будете подстраиваться под ритм вашего питомца, отказываться от выходных и позднего подъема. Животные - источник тепла и ласки, а так же огромного количества положительных эмоций!
+            p.stat-block-text.user-select-none При появлении в доме собаки или кошки ваш образ жизни кардинально изменится! Вы будете подстраиваться под ритм вашего питомца, отказываться от выходных и позднего подъема. Животные - источник тепла и ласки, а так же огромного количества положительных эмоций!
