--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -2,8 +2,9 @@
 @import "../../node_modules/owl.carousel/src/scss/owl.carousel" 
 @import variables 
 @import mixin 
-@import header 
+@import header
 @import footer 
 @import media 
 @import mainpage
 @import stats
+@import top-slider
