--- a/src/index.pug
+++ b/src/index.pug
@@ -16,34 +16,7 @@ html(lang="ru")
             //end header
             
             //main
-            //- section.topslider
-            //-     .topslider__list.js-topslider
-            //-         .topslider__slide
-            //-             .slider__back1
-            //-                 .container.topslider__slide-row
-            //-                     .topslider__slide-text
-            //-                         .topslider__slide-title Забери своего
-            //-                             .text нового друга
-            //-                     .topslider__slide-photo
-            //-                     img(src="images/index-slider/index-lider-1.png", alt="")
-
-            //-     .topslider__slide
-            //-             .slider__back2
-            //-                 .container.topslider__slide-row
-            //-                     .topslider__slide-text
-            //-                         .topslider__slide-title Забери своего
-            //-                             .text нового друга
-            //-                     .topslider__slide-photo
-            //-                     img(src="images/index-slider/index-lider-2.png", alt="")
-
-            //-     .topslider__slide
-            //-             .slider__back3
-            //-                 .container.topslider__slide-row
-            //-                     .topslider__slide-text
-            //-                         .topslider__slide-title Забери своего
-            //-                             .text нового друга
-            //-                     .topslider__slide-photo
-            //-                     img(src="images/index-slider/index-lider-3.png", alt="")
+            include blocks/top-slider
             //end main
 
             //stats-block
@@ -53,3 +26,6 @@ html(lang="ru")
             //footer
             include blocks/footer
             //end footer
+        script(type="text/javascript" src="js/jquery-3.5.1.min.js")
+        script(type="text/javascript" src="js/main.js")
+        script(type="text/javascript" src="js/slick.min.js")
