--- a/src/style/_mainpage.sass
+++ b/src/style/_mainpage.sass
@@ -2,3 +2,7 @@ body
     font-family: 'Roboto', sans-serif
     margin: 0 auto
     padding: 0
+    .container1440
+        width: 1440px
+        margin: 0 auto
+        padding: 0
