--- a/src/style/_feedback.sass
+++ b/src/style/_feedback.sass
@@ -27,5 +27,7 @@
         color: #ffffff
         background-color: #E63946
         margin: 38px 0 38px 43%
+        &:focus
+            outline: none
         &:hover
             background-color: #e24552
