--- a/src/blocks/index-information.pug
+++ b/src/blocks/index-information.pug
@@ -2,7 +2,7 @@ section.news
     .container
         h2.block-head Информация:
         .news-content-row
-            .news-content-col
+            .news-content-col.m-0
                 p.news-content-date 16/10/2020
                 p.news-content-title График работы приюта
                 p.news-content-content Друзья, во время карантина мы работаем ТОЛЬКО в режиме отдачи животных в добрые руки. Это означает, что вы сможете придти и взять кошку или собаку к себе в семью.
