--- a/src/blocks/index-about-us.pug
+++ b/src/blocks/index-about-us.pug
@@ -3,4 +3,4 @@ section.index-about-us
         .row
             .index-about-us-title-text.col-5
                 h3.index-about-us-title О приюте:
-                p.index-about-us-text Приют Нижнего Новгорода - это организация, чья деятельность направлена на помощ животным Нижнего Новгорода в целом и бездомным животным в частности.
+                p.index-about-us-text Приют Нижнего Новгорода - это организация, чья деятельность направлена на помощь животным Нижнего Новгорода в целом и бездомным животным в частности.
