--- a/src/index.pug
+++ b/src/index.pug
@@ -15,9 +15,9 @@ html(lang="ru")
             include blocks/header
             //end header
             
-            //main
+            //top-slider
             include blocks/top-slider
-            //end main
+            //end top-slider
             
             //stats-block
             include blocks/stats
@@ -26,6 +26,10 @@ html(lang="ru")
             //about-us
             include blocks/index-about-us
             //end about-us
+            
+            //slide sponsors
+            include blocks/slide_sponsors
+            //end slide sponsros
             
             //information
             include blocks/index-information
