new pages files

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,15 +16,15 @@ html(lang="ru")
             //end header
             
             //top-slider
-            include blocks/top-slider
+            include blocks/index/top-slider
             //end top-slider
             
             //stats-block
-            include blocks/stats
+            include blocks/index/stats
             //end stats
 
             //about-us
-            include blocks/index-about-us
+            include blocks/index/index-about-us
             //end about-us
             
             //slide sponsors
@@ -32,15 +32,15 @@ html(lang="ru")
             //end slide sponsros
             
             //information
-            include blocks/index-information
+            include blocks/index/index-information
             //end information
 
             //feedback
-            include blocks/feedback
+            include blocks/index/feedback
             //end feedback
 
             //map
-            include blocks/index-map
+            include blocks/index/index-map
             //end map
 
             //footer
