--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -6,10 +6,10 @@
 @import footer 
 @import media 
 @import mainpage
-@import stats
-@import top-slider
-@import index-about-us
-@import index-information
-@import feedback
-@import index-map
+@import index/stats
+@import index/top-slider
+@import index/index-about-us
+@import index/index-information
+@import index/feedback
+@import index/index-map
 @import slide_sponsors
