--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -3,11 +3,11 @@ header.main-header
         .container
             .navbar-collapse.main-nav-style
                 .nav-image
-                    a(href="")
+                    a(href="index.html")
                         img(src="images/logo.svg", alt="Логотип Приют НН")
                 ul.nav.navbar-nav.main-navbar-style
                     li.nav-item
-                        a.nav-link.nav-link-style.p-0(href="") Найти друга
+                        a.nav-link.nav-link-style.p-0(href="catalog.html") Найти друга
                     li.nav-item
                         a.nav-link.nav-link-style.p-0(href="") Информация
                     li.nav-item
