--- a/src/card.pug
+++ b/src/card.pug
@@ -15,6 +15,10 @@ html(lang="ru")
             include blocks/header
             //end header
 
+            //animal-card
+            include blocks/card/animal-card
+            //end animal-card
+
             //footer
             include blocks/footer
             //end footer
