--- a/src/catalog.pug
+++ b/src/catalog.pug
@@ -19,6 +19,10 @@ html(lang="ru")
             include blocks/catalog/catalog-filter
             //end catalog-filter
 
+            //catalog-cards
+            include blocks/catalog/catalog-cards
+            //end catalog-cards
+
             //footer
             include blocks/footer
             //end footer
