--- a/src/blocks/catalog/catalog-filter.pug
+++ b/src/blocks/catalog/catalog-filter.pug
@@ -2,22 +2,27 @@ section.filter-catalog
     .container
         form(action="")
             .row.m-0.filter-up
-                .col-2
-                    input.custom-checkbox(type="checkbox" id="inlineCheckbox1" value="option1")  
-                    label(for="inlineCheckbox1") Собака 
-                    input.custom-checkbox(type="checkbox" id="inlineCheckbox2" value="option2")  
-                    label(for="inlineCheckbox2") Кошка
-                    input(type="radio" id="inlineRadio1" name="inlineRadioOptions" value="option1")  
-                    label(for="inlineRadio1") Мужской
-                    input(type="radio" id="inlineRadio2" name="inlineRadioOptions" value="option2")  
-                    label(for="inlineRadio2") Кухня
+                .filter-up-width
+                    .checkbox
+                        input.custom-checkbox(type="checkbox" id="inlineCheckbox1" value="option1")  
+                        label(for="inlineCheckbox1") Собака
+                        input.custom-checkbox(type="checkbox" id="inlineCheckbox2" value="option2")  
+                        label.custom-checkbox-style(for="inlineCheckbox2") Кошка
+                    .radio
+                        input.custom-radio(type="radio" id="inlineRadio1" name="inlineRadioOptions" value="option1")  
+                        label(for="inlineRadio1") Мужской
+                        input.custom-radio(type="radio" id="inlineRadio2" name="inlineRadioOptions" value="option2")  
+                        label(for="inlineRadio2") Женский
+                .filter-up-position
+                    select.spisok-style
+                        option Возраст
+                        option менее 1 года
+                        option 2 года
+                        option 3 года
+                        option более 5 лет
+                    button.filter-up-btn(type="submit") Применить
+        form(action="")
+            .row.filter-down
                 .col
-                    select
-                        option aaaaaa
-                        option bbbbbb
-                        option vvvvvv
-                    button(type="submit") Применить
-            .row.m-0.filter-down
-                .col
-                    input(type="search")
-                    button(type="submit") 
+                    input.filter-down-serch(type="search" placeholder="Поиск по кличке")
+                    button.filter-down-serch-btn(type="submit") 
