--- a/src/blocks/catalog/catalog-filter.pug
+++ b/src/blocks/catalog/catalog-filter.pug
@@ -24,5 +24,5 @@ section.filter-catalog
         form(action="")
             .row.filter-down
                 .col
-                    input.filter-down-serch(type="search" placeholder="Поиск по кличке")
+                    input.filter-down-serch(type="text" placeholder="Поиск по кличке")
                     button.filter-down-serch-btn(type="submit") 
