--- a/src/blocks/catalog/catalog-cards.pug
+++ b/src/blocks/catalog/catalog-cards.pug
@@ -1,3 +1,17 @@
+section.bread-crumb-catalog
+    .container
+        p.bread-crumb-catalog-style Главная \ Найти друга
 section.catalog
     .container
-        .catalog-cards
+        .row
+            .catalog-cards.row
+                .catalog-cards-img.col-6.p-0
+                    img.cards-img(src="images/ozik-1.png", alt="")
+                .catalog-cards-text.col-6.p-0
+                    p.catalog-card-text-title Озик
+                    p.catalog-card-text-info Пол: 
+                        span Мужской
+                    p.catalog-card-text-info Возраст: 
+                        span 5 месяцев
+                    .btn-catalog-div
+                        a.btn-catalog-style(href="") Подробнее
