--- a/src/application.pug
+++ b/src/application.pug
@@ -15,7 +15,9 @@ html(lang="ru")
             include blocks/header
             //end header
 
-
+            //application-card
+            include blocks/application/application-card
+            //end application-card
 
             //footer
             include blocks/footer
