--- a/src/blocks/catalog/catalog-cards.pug
+++ b/src/blocks/catalog/catalog-cards.pug
@@ -14,5 +14,5 @@ section.catalog
                     p.catalog-card-text-info Возраст: 
                         span 5 месяцев
                     .btn-catalog-div
-                        a.btn-catalog-style(href="") Подробнее
+                        a.btn-catalog-style(href="card.html") Подробнее
                         
