--- a/src/blocks/card/animal-card.pug
+++ b/src/blocks/card/animal-card.pug
@@ -4,7 +4,7 @@ section.bread-crumb
 section.animal-card
     .container
         .animal-card-block
-            img(src="images/ozik-1.png", alt="Первое фото")
+            img.animal-card-images(src="images/about-banner.png", alt="Первое фото")
             .animal-story-style
                 p.animal-story-head Озик
                 p.animal-story-text.m-0 Жизнь крохотного щенка началась под лестницей магазина. Вместо теплого лежака и вкусного обеда его ожидала холодная улица и подачки прохожих. К счастью, на улице малыш провел меньше месяца. Вскоре после своего рождения он и трое его братьев попали в руки команды ловцов благотворительного фонда «Приют НН». В приюте фонда он быстро окреп и подрос.
@@ -69,10 +69,10 @@ section.animal-card
                         .animal-param-img.col
                             img(src="images/icon/social-icon.svg", alt="Иконка книги")
             .animal-stat.col
-                img(src="images/ozik-2.png", alt="Второе фото")
+                img.animal-card-images(src="images/ozik-2.png", alt="Второе фото")
         .row
             .animal-stat.col
-                img(src="images/ozik-3.png", alt="Третье фото")
+                img.animal-card-images(src="images/ozik-3.png", alt="Третье фото")
             .animal-stat.col
                 .animal-param-block
                     p.animal-param Необходимые прививки:
