--- a/src/style/card/animal-card.sass
+++ b/src/style/card/animal-card.sass
@@ -35,6 +35,9 @@
     font-size: 24px
     line-height: 28px
     margin: 46px 0 
+.animal-card-images
+    width: 400px
+    height: 350px
 .animal-stat
     margin-bottom: 70px
     .animal-param-block
@@ -53,6 +56,7 @@
             font-size: 18px
             line-height: 21px
 .request-button
+    z-index: 10
     padding: 10px 70px
     color: #ffffff
     font-style: normal
