--- a/src/blocks/card/animal-card.pug
+++ b/src/blocks/card/animal-card.pug
@@ -4,7 +4,7 @@ section.bread-crumb
 section.animal-card
     .container
         .animal-card-block
-            img.animal-card-images(src="images/about-banner.png", alt="Первое фото")
+            img.animal-card-images(src="images/ozik-1.png", alt="Первое фото")
             .animal-story-style
                 p.animal-story-head Озик
                 p.animal-story-text.m-0 Жизнь крохотного щенка началась под лестницей магазина. Вместо теплого лежака и вкусного обеда его ожидала холодная улица и подачки прохожих. К счастью, на улице малыш провел меньше месяца. Вскоре после своего рождения он и трое его братьев попали в руки команды ловцов благотворительного фонда «Приют НН». В приюте фонда он быстро окреп и подрос.
@@ -88,7 +88,7 @@ section.animal-card
                             p.animal-param-text Маленький
                         .animal-param-img.col    
                             img(src="images/icon/ruler.svg", alt="Иконка линейки")
-                button.request-button Оставить заявку
+                a.request-button(href="") Оставить заявку
             .animal-stat.col
                 .animal-param-block
                     p.animal-param Стерелизация:
