--- a/src/style/card/animal-card.sass
+++ b/src/style/card/animal-card.sass
@@ -69,9 +69,10 @@
     bottom: 0
     left: 200px
     border: none
+    width: 335px
     &:focus
         outline: none
-        
     &:hover
+        text-decoration: none
         color: #ffffff
         background: #fa3e4e
