--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -11,7 +11,7 @@ header.main-header
                     li.nav-item
                         a.nav-link.nav-link-style.p-0(href="") Информация
                     li.nav-item
-                        a.nav-link.nav-link-style.p-0(href="") О нас
+                        a.nav-link.nav-link-style.p-0(href="about.html") О нас
                     li.nav-item
                         a.nav-link.nav-link-style.p-0(href="") Пожертвования
                 .nav-phone
