--- a/src/about.pug
+++ b/src/about.pug
@@ -3,7 +3,7 @@ html(lang="ru")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        title Оставить заявку
+        title О нас
         //css
         link(rel="stylesheet" href="./css/styles.min.css")
         //ff
@@ -15,10 +15,13 @@ html(lang="ru")
             include blocks/header
             //end header
 
-            //application-card
-            include blocks/application/application-card
-            //end application-card
+            //animal-card
+            include blocks/about/about
+            //end animal-card
 
             //footer
             include blocks/footer
             //end footer
+        script(type="text/javascript" src="js/jquery-3.5.1.min.js")
+        script(type="text/javascript" src="js/main.js")
+        script(type="text/javascript" src="js/slick.min.js")
