--- a/src/about.pug
+++ b/src/about.pug
@@ -19,6 +19,18 @@ html(lang="ru")
             include blocks/about/about
             //end animal-card
 
+            //slide sponsors
+            include blocks/slide_sponsors
+            //end slide sponsros
+
+            //contacts-adress
+            include blocks/about/contacts-adress
+            //end contacts-adress
+
+            //contacts-adress
+            include blocks/about/maps
+            //end contacts-adress
+
             //footer
             include blocks/footer
             //end footer
