--- a/src/blocks/card/animal-card.pug
+++ b/src/blocks/card/animal-card.pug
@@ -88,7 +88,7 @@ section.animal-card
                             p.animal-param-text Маленький
                         .animal-param-img.col    
                             img(src="images/icon/ruler.svg", alt="Иконка линейки")
-                a.request-button(href="") Оставить заявку
+                a.request-button(href="application.html") Оставить заявку
             .animal-stat.col
                 .animal-param-block
                     p.animal-param Стерелизация:
