--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -9,7 +9,7 @@ header.main-header
                     li.nav-item
                         a.nav-link.nav-link-style.p-0(href="catalog.html") Найти друга
                     li.nav-item
-                        a.nav-link.nav-link-style.p-0(href="") Информация
+                        a.nav-link.nav-link-style.p-0(href="information.html") Информация
                     li.nav-item
                         a.nav-link.nav-link-style.p-0(href="about.html") О нас
                     li.nav-item
