--- a/src/blocks/index/top-slider.pug
+++ b/src/blocks/index/top-slider.pug
@@ -5,16 +5,16 @@ section.top-slider
                 .slider-content.container
                     .slider-title Наши сердца
                     .slider-text в ваших руках
-                    .btn.slider-btn Подробнее
+                    a.btn.slider-btn(href="catalog.html") Подробнее
         .slider-item
             .slider-img-1
                 .slider-content.container
                     .slider-title Забери своего
                     .slider-text нового друга
-                    .btn.slider-btn Подробнее
+                    a.btn.slider-btn(href="catalog.html") Подробнее
         .slider-item
             .slider-img-3
                 .slider-content.container
                     .slider-title Будь в ответе
                     .slider-text за тех, кого приручил
-                    .btn.slider-btn Подробнее
+                    a.btn.slider-btn(href="catalog.html") Подробнее
