--- a/src/blocks/header.pug
+++ b/src/blocks/header.pug
@@ -13,7 +13,7 @@ header.main-header
                     li.nav-item
                         a.nav-link.nav-link-style.p-0(href="about.html") О нас
                     li.nav-item
-                        a.nav-link.nav-link-style.p-0(href="") Пожертвования
+                        a.nav-link.nav-link-style.p-0(href="donations.html") Пожертвования
                 .nav-phone
                     img(src="images/icon/phone.svg")
                     a.number-phone(href="tel:88005553535") 8 800 555 35 35
