--- a/src/donations.pug
+++ b/src/donations.pug
@@ -3,7 +3,7 @@ html(lang="ru")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        title Приют НН
+        title Пожертвования
         //css
         link(rel="stylesheet" href="./css/styles.min.css")
         //ff
