--- a/src/style/application/application-card.sass
+++ b/src/style/application/application-card.sass
@@ -20,20 +20,9 @@
         line-height: 28px
         color: $text
     .application-block-form
-        margin-left: 77px
-        .application-block-form-text
-            margin-bottom: 7px
-            font-weight: 500
-            font-size: 14px
-            line-height: 15px
-            color: $text
-        .application-form-input
-            margin-bottom: 30px
-            width: 240px
-            height: 40px
-            border: 1px solid #9A9A9A
-            &:focus
-                outline: none
+        margin-left: 40px
+    .application-block-card
+        margin-left: 60px
     .application-block-card-images
         width: 280px
         margin-left: 40px
@@ -67,6 +56,45 @@
                 outline: none
         &:hover
             background-color: #fa3e4e
-
-
-
+.app-input
+	width: 300px
+	position: relative
+	overflow: hidden
+	padding-top: 15px
+	input 
+		width: 100%
+		padding: 10px
+		border: none
+		outline: none
+		border-bottom: 1px solid #999999
+		box-sizing: border-box
+		font-size: 16px
+		position: relative
+		z-index: 5
+		background: none
+		&:focus ~ .line 
+			left: 0
+			opacity: 1
+	.line 
+		position: absolute
+		left: 0
+		bottom: 0
+		width: 100%
+		height: 3px
+		background: $red
+		left: -999px
+		transition: .25s
+		opacity: 0
+		z-index: 6
+	label 
+		position: absolute
+		left: 10px
+		top: 45%
+		transition: ease-out .15s
+		color: #999999
+.app-input input:focus ~ .app-label, input:valid ~ .app-label
+	top: 0px
+	transform: scale(0.94) translateX(-2px)
+	color: $red
+.app-input-style
+    margin: 5px
