header and footer admin

--- a/src/blocks/card/animal-card.pug
+++ b/src/blocks/card/animal-card.pug
@@ -91,7 +91,7 @@ section.animal-card
                 a.request-button(href="application.html") Оставить заявку
             .animal-stat.col
                 .animal-param-block
-                    p.animal-param Стерелизация:
+                    p.animal-param Стерилизация:
                     .row
                         .col
                             p.animal-param-text Нет
