--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -21,3 +21,6 @@
 @import about/about
 @import information/information
 @import auth/form
+@import admin-header
+@import admin-footer
+@import admin-index/admin-index
