--- a/src/style/_admin-footer.sass
+++ b/src/style/_admin-footer.sass
@@ -1,32 +1,29 @@
-.main-footer
+.admin-footer
     border-top: 1px solid $text
-.main-footer-style
+.admin-footer-style
     justify-content: space-between
     .footer-item
         width: 210px
         margin: 50px 0 50px 0
         .footer-nav-item-style
             margin: 10px 0 10px 0
-            .footer-nav-link
+            .admin-nav-link-style
                 color: #000000
                 font-size: 16px
                 position: relative
                 display: inline
                 &:hover
-                    color: $red
+                    color: $admin-color
                 &:after
                     content: ''
                     width: 0
-                    border-bottom: 2px solid $red
+                    border-bottom: 2px solid $admin-color
                     position: absolute
                     left: 0
                     bottom: -2px
                     transition: all 0.2s ease
                 &:hover:after
                     width: 100%
-        .nav-footer-style
-            justify-content: space-between
-            padding-bottom: 73px
         .our-adress
             padding-top: 30px
             text-align: center
