--- a/src/style/_admin-header.sass
+++ b/src/style/_admin-header.sass
@@ -1,26 +1,25 @@
-.main-nav-style
+.admin-nav-style
     justify-content: start
-    .main-navbar-style
+    .admin-navbar-style
         flex-grow: 1
-        .nav-link-style
-            margin: 8px 0 0 30px
+        .admin-nav-link-style
+            margin: 0 0 0 30px
             color: #000000
             font-size: 16px
             position: relative
             &:hover
-                color: $red
+                color: $admin-color
             &:after
                 content: ''
                 width: 0
-                border-bottom: 2px solid $red
+                border-bottom: 2px solid $admin-color
                 position: absolute
                 left: 0
                 bottom: -2px
                 transition: all 0.2s ease
             &:hover:after
                 width: 100%
-    .number-phone
+    .exit-text
         color: #000000
         margin-left: 3px
         text-decoration: none
-
