--- a/src/blocks/admin-footer.pug
+++ b/src/blocks/admin-footer.pug
@@ -4,13 +4,13 @@ footer.admin-footer
             section.footer-item
                 ul.nav.navbar-nav.main-navbar-style
                     li.nav-item.footer-nav-item-style
-                        a.nav-link.admin-nav-link-style.p-0(href="") Найти друга
+                        a.nav-link.admin-nav-link-style.p-0(href="") Просмотр заявок
                     li.nav-item.footer-nav-item-style
-                        a.nav-link.admin-nav-link-style.p-0(href="") Информация
+                        a.nav-link.admin-nav-link-style.p-0(href="") Просмотр сообщений
                     li.nav-item.footer-nav-item-style
-                        a.nav-link.admin-nav-link-style.p-0(href="") О нас
+                        a.nav-link.admin-nav-link-style.p-0(href="") Редактор новостей
                     li.nav-item.footer-nav-item-style
-                        a.nav-link.admin-nav-link-style.p-0(href="") Пожертвования
+                        a.nav-link.admin-nav-link-style.p-0(href="") Новая карточка
             section.footer-item
                 a(href="")
                     img(src="images/logo-admin.svg", alt="Логотип Админ-панели Приют НН")
